logo update again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-						  <h2><img src="images/misc/VDD LOGO - Copy.jpg" width="450" height="150"></h2>
+						  <h2><img src="images/misc/VDD LOGO - Copy.jpg"></h2>
 						</header>
 						<p>Virginia Drafting &amp; Detailing started in 2012 as homebuilders began outsourcing their CAD services in order to maximize margins during the recession.  Time and time again builders would utilize services in foreign countries enticed by higher margins, just to discover the quality and ability of these outsources cost a great deal more during construction due to a lack of sufficient knowledge from the outsourcing team.</p>
 						<p>Virginia Drafting &amp; Detailing was created by a group of CAD designers with multiple years of experience in large building companies such as Beazer, Pulte, John Wieland Homes &amp; Neighborhoods and CP Morgan in order to bridge the gap between the need to outsource, and a quality product.  Since 2012, the team has created partnerships with several large builders and handle everything from CAD outsourcing to estimating and design.  Their vast experience in building codes across the U.S. along with their wealth of knowledge of the homebuilding industry, has helped to create the feel of having an in-house team, while builders still reap the benefits of a lasting outsourcing solution.</p>
