--- a/index.html
+++ b/index.html
@@ -26,40 +26,47 @@
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
-						  <h2><img src="images/misc/VDD LOGO - Copy.jpg"></h2>
+					  <header class="major">
+						  <h2><img src="images/misc/VDD LOGO - Copy.jpg"><img src="images/paper.jpg" width="274" height="182" align="right"></h2>
 						</header>
-						<p>Virginia Drafting &amp; Detailing started in 2012 as homebuilders began outsourcing their CAD services in order to maximize margins during the recession.  Time and time again builders would utilize services in foreign countries enticed by higher margins, just to discover the quality and ability of these outsources cost a great deal more during construction due to a lack of sufficient knowledge from the outsourcing team.</p>
-						<p>Virginia Drafting &amp; Detailing was created by a group of CAD designers with multiple years of experience in large building companies such as Beazer, Pulte, John Wieland Homes &amp; Neighborhoods and CP Morgan in order to bridge the gap between the need to outsource, and a quality product.  Since 2012, the team has created partnerships with several large builders and handle everything from CAD outsourcing to estimating and design.  Their vast experience in building codes across the U.S. along with their wealth of knowledge of the homebuilding industry, has helped to create the feel of having an in-house team, while builders still reap the benefits of a lasting outsourcing solution.</p>
-						<ul class="actions">
-						  <li><a href="#" class="button">Learn More</a></li>
-						</ul>
-					</section>
+					  <h2>Residential Drafting Services</h2>
+					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price. If you have a residential plan or concept  and you need scale, professional drawings made, you've come to the right place. Also, FREE estimates!</p>
+						<p>We can provide:<br>
+- Floor Plans<br>
+- Elevations<br>
+- Roof Plans<br>
+- Details<br>
+- Sections<br>
+- Electrical Plans<br>
+- 3D Perspectives<br>
+- Any scale / paper size<br>
+<br>
+We draft everything in 3D using Autodesk Revit, which means we will produce a 3D model of your project, and.your plans can include 3D  images of the exterior and/or interior.  We can additionally provide virtual walk-throughs, and  the 3D file itself (Viewable in <a href="https://viewer.autodesk.com">Autodesk's free File Viewer</a>), and/or  export 2D AutoCad files of everything.<br>
+					  </p>
+</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Work Samples</h2>
+						<h2> Experienced in:</h2>
 						<p>&nbsp;</p>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Townhome Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3>Large Single-Family Homes</h3>
+								<p>&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3> Any Single Family Home</h3>
+								<p>&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/rearporch.png" alt="" /></a>
+								<h3>Home Rennovations / Additions							</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<h3>Multi-Unit Single-Family Townhomes							</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item"></article>
 							<article class="col-6 col-12-xsmall work-item"></article>
