--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 				<!-- One -->
 					<section id="one">
 					  <header class="major">
-						  <h2><img src="images/misc/VDD LOGO - Copy.jpg"><img src="images/paper.jpg" width="274" height="182" align="right"></h2>
+						  <h2><img src="images/misc/VDD LOGO - Copy.jpg" width="358" height="119"><img src="images/paper.jpg" width="244" height="162" align="right"></h2>
 						</header>
 					  <h2>Residential Drafting Services</h2>
-					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price. If you have a residential plan or concept  and you need scale, professional drawings made, you've come to the right place. Also, FREE estimates!</p>
+					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price. If you have a residential plan or concept  and you need scale, professional drawings made, you've come to the right place.</p>
 						<p>We can provide:<br>
 - Floor Plans<br>
 - Elevations<br>
@@ -40,6 +40,8 @@
 - Electrical Plans<br>
 - 3D Perspectives<br>
 - Any scale / paper size<br>
+- Free estimates!
+<br>
 <br>
 We draft everything in 3D using Autodesk Revit, which means we will produce a 3D model of your project, and.your plans can include 3D  images of the exterior and/or interior.  We can additionally provide virtual walk-throughs, and  the 3D file itself (Viewable in <a href="https://viewer.autodesk.com">Autodesk's free File Viewer</a>), and/or  export 2D AutoCad files of everything.<br>
 					  </p>
