--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					  <h2>Residential Drafting Services</h2>
 					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price. If you have a residential plan or concept  and you need scale, professional drawings made, you've come to the right place!</p>
 						<p>We can provide:<br>
-- Floor Plans<br>
+- Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"><br>
 - Elevations<br>
 - Roof Plans<br>
 - Details<br>
