--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						  <h2><img src="images/misc/VDD LOGO - Copy.jpg" width="358" height="119"><img src="images/paper.jpg" width="244" height="162" align="right"></h2>
 						</header>
 					  <h2>Residential Drafting Services</h2>
+					  <p>&nbsp;</p>
 					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price. If you have a residential plan or concept  and you need scale, professional drawings made, you've come to the right place!</p>
 						<p>We can provide:<br>
 - Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"><br>
