cname file added

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ We draft everything in 3D using Autodesk Revit, which means we will produce a 3D
 
 				<!-- Two -->
 					<section id="two">
-						<h2> Experienced in:</h2>
-						<p>&nbsp;</p>
+						<h2>&nbsp;</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
