--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@ We draft everything in 3D using Autodesk Revit, which means we will produce a 3D
 								<p>&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3> Any Single Family Home</h3>
+								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3> Small Single Family Home</h3>
 								<p>&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/rearporch.png" alt="" /></a>
-								<h3>Home Rennovations / Additions							</h3>
+								<h3>Home Rennovations / Additions						</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Multi-Unit Single-Family Townhomes							</h3>
+								<h3>Townhomes </h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item"></article>
 							<article class="col-6 col-12-xsmall work-item"></article>
