--- a/index.html
+++ b/index.html
@@ -31,30 +31,32 @@
 						</header>
 					  <h2>Residential Drafting Services</h2>
 					  <p>&nbsp;</p>
-					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price. If you have a residential plan or concept  and you need scale, professional drawings made, you've come to the right place!</p>
-						<p>We can provide:<br>
-- Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"><br>
-- Elevations<br>
-- Roof Plans<br>
-- Details<br>
-- Sections<br>
-- Electrical Plans<br>
-- 3D Perspectives<br>
-- Any scale / paper size<br>
-- Free estimates!
+					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price.</p>
+						<p>We can provide:
+                        <ul>
+<li> Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"></li>
+<li> Elevations</li>
+<li> Roof Plans</li>
+<li> Details</li>
+<li> Sections</li>
+<li> Electrical Plans</li>
+<li> 3D Perspectives</li>
+<li> Any scale / paper size</li>
+<li> Free estimates!</li>
+</ul> 
 <br>
 <br>
-We draft everything in 3D using Autodesk Revit, which means we will produce a 3D model of your project, and your plans can include 3D  images of the exterior and/or interior.  We can also provide virtual walk-throughs, and  the 3D file itself (Viewable in <a href="https://viewer.autodesk.com">Autodesk's free File Viewer</a>) and/or  export 2D AutoCad files of everything.<br>
+We draft everything in    Revit Architecture, which means we will draw a 3D model of your project, and  can include 3D  images of the exterior/ interior, virtual walk-throughs,   the 3D file itself (Viewable in <a href="https://viewer.autodesk.com">Autodesk's free File Viewer</a>) and  export 2D AutoCad files of everything.<br>
 					  </p>
 </section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>&nbsp;</h2>
+					  <h2>Examples of past work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Large Single-Family Homes</h3>
+								<h3>Large Single-Family Home Sample</h3>
 								<p>&nbsp;</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -81,7 +83,7 @@ We draft everything in 3D using Autodesk Revit, which means we will produce a 3D
 						<p>&nbsp;</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="#">
+								<form action="mailto:virginiadrafting@gmail.com" method="post" enctype="text/plain">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
