--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<!-- One -->
 					<section id="one">
 					  <header class="major">
-						  <h2><img src="images/misc/VDD LOGO - Copy.jpg" width="358" height="119"><img src="images/paper.jpg" width="244" height="162" align="right"></h2>
+						  <h2><img src="images/logo.jpg" width="398" height="133"><img src="images/paper.jpg" width="244" height="162" align="right"></h2>
 						</header>
 					  <h2>Residential Drafting Services</h2>
 					  <p>&nbsp;</p>
@@ -86,11 +86,8 @@ We draft everything in    Revit Architecture, which means we will produce a 3D m
 								<h3>&nbsp;</h3>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/08.jpg" class="image fit thumb"><img src="images/thumbs/08.jpg" alt="" /></a>
-								<h3>&nbsp;</h3>
-							</article>
-				
-						</div>
+							<a href="images/fulls/08.jpg" class="image fit thumb"><img src="images/thumbs/08.jpg" alt="" /></a></article>
+					  </div>
 </section>
 
 				<!-- Three -->
