--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 					  </header>
 					  <h2>Residential Drafting Services</h2>
 					  <p>&nbsp;</p>
-					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and we gurantee fast, accurate drawings at a cometitive price.</p>
+					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and  guarantee fast, accurate drawings at a competitive price.</p>
 						<p>We can provide:
                         <ul>
-<li> Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"></li>
+<li> Architectural Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"></li>
 <li> Elevations</li>
 <li> Roof Plans</li>
 <li> Details</li>
@@ -38,7 +38,7 @@
 <li> Free estimates!</li>
 </ul> 
 <br>
-We draft everything in    Revit Architecture, which means we will produce a 3D model of your project, and  can include 3D  images of the exterior/ interior, virtual walk-throughs,   the 3D file itself (Viewable in <a href="https://viewer.autodesk.com">Autodesk's free File Viewer</a>) and also export any 2D AutoCad files you need.<br>
+We draft everything in    Revit Architecture, which means we will produce a 3D model of your project, and  can include 3D  images of the exterior/ interior, virtual walkthroughs,   the 3D file itself (Viewable in <a href="https://viewer.autodesk.com">Autodesk's free File Viewer</a>) and also export any 2D AutoCad files you need.<br>
 					  </p>
 </section>
 
