--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					  </header>
 					  <h2>Residential Drafting Services</h2>
 					  <p>&nbsp;</p>
-					  <p>Virginia Drafting &amp; Detailing provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and  guarantee fast, accurate drawings at a competitive price.</p>
+					  <p>Virginia Drafting &amp; Detailing LLC provides architectural drawings of new residential homes and additions. We have been in the residential drafting industry since 2006, and  guarantee fast, accurate drawings at a competitive price.</p>
 						<p>We can provide:
                         <ul>
 <li> Architectural Floor Plans<img src="images/colorhome.jpg" width="250" height="191" align="right"></li>
